--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -12,6 +12,8 @@
       %a.navbar-brand{:href => "/"} poi-statistics
     %div#navbar-main.navbar-collapse.collapse
       %ul.nav.navbar-nav
+        %li{:class => locals[:location] == "construction" ? "active" : nil}
+          %a{:href => "/construction"} 建造统计
         %li{:class => locals[:location] == "development" ? "active" : nil}
           %a{:href => "/development"} 开发统计
         %li{:class => locals[:location] == "drop" ? "active" : nil}
