--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -18,6 +18,8 @@
           %a{:href => "/development"} 开发统计
         %li{:class => locals[:location] == "drop" ? "active" : nil}
           %a{:href => "/drop/"} 掉落统计
+        %li{:class => locals[:location] == "event" ? "active" : nil}
+          %a{:href => "/event-sanma2017/"} 秋刀鱼祭典
         %li
           %a{:href => "http://zh.kcwiki.moe/"} 舰娘百科
         %li{:class => locals[:location] == "about" ? "active" : nil}
