--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -26,8 +26,10 @@
               %a{:href => "#area37", :"data-toggle" => "tab"} 偵察戦力緊急展開！「光」作戦
             %li
               %a{:href => "#area38", :"data-toggle" => "tab"} 出撃！北東方面 第五艦隊
-            %li.active
+            %li
               %a{:href => "#area39", :"data-toggle" => "tab"} 西方再打通！欧州救援作戦
+            %li.active
+              %a{:href => "#area40", :"data-toggle" => "tab"} 捷号決戦！邀撃、レイテ沖海戦(前篇)
           %div.tab-content.top15
             %div#area1.tab-pane
               %div.col-xs-12
@@ -201,7 +203,7 @@
                 %div.row
                   %a{:href => "/drop/map/385/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-5Spring2017.png"), :alt => "MapBannerE-5Spring2017.png"}
-            %div#area39.tab-pane.active
+            %div#area39.tab-pane
               %div.col-xs-12
                 %div.row
                   %a{:href => "/drop/map/391/"}
@@ -224,6 +226,20 @@
                 %div.row
                   %a{:href => "/drop/map/397/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-7Summer2017.png"), :alt => "MapBannerE-7Summer2017.png"}
+            %div#area40.tab-pane.active
+              %div.col-xs-12
+                %div.row
+                  %a{:href => "/drop/map/401/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Autumn2017.png"), :alt => "MapBannerE-1Autumn2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/402/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Autumn2017.png"), :alt => "MapBannerE-2Autumn2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/403/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Autumn2017.png"), :alt => "MapBannerE-3Autumn2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/404/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-4-1Autumn2017.png"), :alt => "MapBannerE-4Autumn2017.png"}
   %div.col-xs-12.col-md-6
     %div.panel-group
       %div.panel.panel-primary
