Use disqus instead of changyan

--- a/views/about/index.haml
+++ b/views/about/index.haml
@@ -71,6 +71,4 @@
         %li
           %p KC3改
           %p 已内置PoiDBSubmission。
-=haml :duoshuo, :locals => { :key => "about",
-                             :title => "关于",
-                             :url => "http://db.kcwiki.moe/about/" }
+=haml :disqus, :locals => { :key => "about" }
