--- a/views/construction/ship.haml
+++ b/views/construction/ship.haml
@@ -49,4 +49,4 @@
     $(document).ready(function() {
       requestData("#{ship_id}");
     });
-=haml :changyan, :locals => { :key => "construction/ship/#{ship_id}" }
+=haml :disqus, :locals => { :key => "construction/ship/#{ship_id}" }
