--- a/views/development/item.haml
+++ b/views/development/item.haml
@@ -46,4 +46,4 @@
     $(document).ready(function() {
       requestData("#{item_id}");
     });
-=haml :changyan, :locals => { :key => "development/item/#{item_id}" }
+=haml :disqus, :locals => { :key => "development/item/#{item_id}" }
