--- a/views/disqus.haml
+++ b/views/disqus.haml
@@ -60,7 +60,8 @@
     timeout: 3000,
     init: true,
     emoji_list: emojiList,
-    emoji_preview: true
+    emoji_preview: true,
+    auto: true
   });
 :javascript
   document.getElementsByClassName("comment-form-url")[0].style.display = 'none';
