--- a/views/drop/ship.haml
+++ b/views/drop/ship.haml
@@ -55,4 +55,4 @@
     $(document).ready(function() {
       loadData({id: #{ship_id}, rank: "#{rank}", name: "#{ConstData.ship[ship_id]["chinese_name"]}"});
     });
-=haml :changyan, :locals => { :key => "drop/ship/#{ship_id}" }
+=haml :disqus, :locals => { :key => "drop/ship/#{ship_id}" }
