Update map data

--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -350,7 +350,7 @@
                         %a.btn.btn-default{:href => "/drop/ship/#{s["id"]}/"}= s["name"]
             %div#new.tab-pane.active
               %ul.list-inline
-                - [479, 480, 485, 471, 473, 475, 421, 519, 439, 492, 521, 332, 515, 535, 517, 518, 524, 525, 162, 552, 161].each do |s|
+                - [457, 479, 480, 167, 456, 409, 410, 484, 485, 175, 471, 472, 473, 474, 475, 421, 519, 516, 439, 492, 511, 440, 171, 521, 332, 515, 432, 433, 535, 517, 518, 524, 525, 531, 540, 162, 552, 161].each do |s|
                   - ship = ConstData.ship[s]
                   %li
                     %p
