--- a/views/event-food2018/index.haml
+++ b/views/event-food2018/index.haml
@@ -36,11 +36,17 @@
       %div.panel-body
         %ul.nav.nav-pills
           %li.active
-            %a{:href => "#180515", :"data-toggle" => "tab"} 18/05/15 
+            %a{:href => "#180608", :"data-toggle" => "tab"} 18/06/08 UP
+          %li
+            %a{:href => "#180515", :"data-toggle" => "tab"} 05/15-05/18 & 05/22-05/24 & 05/29-06/01
           %li
             %a{:href => "#180518", :"data-toggle" => "tab"} 18/05/18 UP
+          %li
+            %a{:href => "#180524", :"data-toggle" => "tab"} 18/05/24 UP
+          %li
+            %a{:href => "#180601", :"data-toggle" => "tab"} 18/06/01 UP
         %div.tab-content.top15
-          %div#180515.tab-pane.active
+          %div#180515.tab-pane
             %ul.nav.nav-pills
               - item_data_180515.each do |i|
                 %li{:class => item_data_180515.first == i ? "active" : ""}
@@ -72,6 +78,78 @@
             %div.tab-content.top15
               - item_data_180518.each do |i|
                 %div.tab-pane{:id => "item180518-#{i[:id]}", :class => item_data_180518.first == i ? "active" : ""}
+                  %table.table.table-striped.table-hover{:style => "text-align:center;"}
+                    %thead
+                      %tr
+                        %td 海域点
+                        %td S胜掉落次数
+                        %td S胜掉落率
+                        %td A胜掉落次数
+                        %td A胜掉落率
+                    %tbody
+                      - i[:data].sort{|a, b| b[1]["s_count"] <=> a[1]["s_count"]}.each do |d|
+                        %tr
+                          %td= d[0]
+                          %td= d[1]["s_count"]
+                          %td= "#{(d[1]["s_count"] * 100.0 / d[1]["s_total"]).round(3)}%"
+                          %td= d[1]["a_count"]
+                          %td= "#{d[1]["a_total"] > 0 ? (d[1]["a_count"] * 100.0 / d[1]["a_total"]).round(3) : 0}%"
+          %div#180524.tab-pane
+            %ul.nav.nav-pills
+              - item_data_180524.each do |i|
+                %li{:class => item_data_180524.first == i ? "active" : ""}
+                  %a{:href => "#item180524-#{i[:id]}", :"data-toggle" => "tab"}= ConstData.useitem[i[:id]]["name"]
+            %div.tab-content.top15
+              - item_data_180524.each do |i|
+                %div.tab-pane{:id => "item180524-#{i[:id]}", :class => item_data_180524.first == i ? "active" : ""}
+                  %table.table.table-striped.table-hover{:style => "text-align:center;"}
+                    %thead
+                      %tr
+                        %td 海域点
+                        %td S胜掉落次数
+                        %td S胜掉落率
+                        %td A胜掉落次数
+                        %td A胜掉落率
+                    %tbody
+                      - i[:data].sort{|a, b| b[1]["s_count"] <=> a[1]["s_count"]}.each do |d|
+                        %tr
+                          %td= d[0]
+                          %td= d[1]["s_count"]
+                          %td= "#{(d[1]["s_count"] * 100.0 / d[1]["s_total"]).round(3)}%"
+                          %td= d[1]["a_count"]
+                          %td= "#{d[1]["a_total"] > 0 ? (d[1]["a_count"] * 100.0 / d[1]["a_total"]).round(3) : 0}%"
+          %div#180601.tab-pane
+            %ul.nav.nav-pills
+              - item_data_180601.each do |i|
+                %li{:class => item_data_180601.first == i ? "active" : ""}
+                  %a{:href => "#item180601-#{i[:id]}", :"data-toggle" => "tab"}= ConstData.useitem[i[:id]]["name"]
+            %div.tab-content.top15
+              - item_data_180601.each do |i|
+                %div.tab-pane{:id => "item180601-#{i[:id]}", :class => item_data_180601.first == i ? "active" : ""}
+                  %table.table.table-striped.table-hover{:style => "text-align:center;"}
+                    %thead
+                      %tr
+                        %td 海域点
+                        %td S胜掉落次数
+                        %td S胜掉落率
+                        %td A胜掉落次数
+                        %td A胜掉落率
+                    %tbody
+                      - i[:data].sort{|a, b| b[1]["s_count"] <=> a[1]["s_count"]}.each do |d|
+                        %tr
+                          %td= d[0]
+                          %td= d[1]["s_count"]
+                          %td= "#{(d[1]["s_count"] * 100.0 / d[1]["s_total"]).round(3)}%"
+                          %td= d[1]["a_count"]
+                          %td= "#{d[1]["a_total"] > 0 ? (d[1]["a_count"] * 100.0 / d[1]["a_total"]).round(3) : 0}%"
+          %div#180608.tab-pane.active
+            %ul.nav.nav-pills
+              - item_data_180608.each do |i|
+                %li{:class => item_data_180608.first == i ? "active" : ""}
+                  %a{:href => "#item180608-#{i[:id]}", :"data-toggle" => "tab"}= ConstData.useitem[i[:id]]["name"]
+            %div.tab-content.top15
+              - item_data_180608.each do |i|
+                %div.tab-pane{:id => "item180608-#{i[:id]}", :class => item_data_180608.first == i ? "active" : ""}
                   %table.table.table-striped.table-hover{:style => "text-align:center;"}
                     %thead
                       %tr
